Version 1.11.2 - 
-----------------------------
Core - General:
  - Minor fix to the en_US.nls file
  - Fixes issue with miss spelled class name resulted in error when editing/adding content when sitedown was enabled.

MenuManager
  - Fixes minor expression issue wrt the show_all parameter in the breadcrumb action.

News
  - Minor fixes.



Version 1.11.1 - Baltra
-----------------------------
Core - General:
  - Minor fix to the GetChildren method when loading properties of inactive page
  - Fixes to smarty error_eporting. Should now listen to the PHP error level
  - Minor typo fix
  - Fix an issue with {content wysiwyg=false}
  - Fixing typo in CmsNlsOperations. Admin and Frontend has now own separated language detection spots. Language detector class now works as it should
  - Fix problem with links in notifications generated by modules and the GatherNotifications task
  - Minor fix to notice for module generated content blocks.
  - Fixes the {content_image} tag.
  - prefilters and postfilters can now be displayed in the listtags admin page.
  - Fixes to the get_called_class() method wrt php 5.2
  - Fixes expression for caching of UDT's
  - {content_image} and {content_module} will now generate errors if a block param is not specified.
  - Fixes issue with addtemplate & edittemplate smarty fetching process, now using own compile id for temporal template data.  
  - The view site link in admin navigation now points to the <root url>/index.php rather than just <root url>
  - Minor fix to the OneEleven thme when a node had no description.

News
  - Fix problem with category parameter

Printing
  - fix a problem with the {print} tag wrt php 5.2

Search
  - Fixes E_STRICT errors
  
Version 1.11 - Galapagos 
-----------------------------
Core - General:
  - Adds new HTML5 frontend sample theme "Simplex" (thanks to Goran)
  - Removed the HasAdminBuffering module method
  - If output buffering is disabled in the request, theme is also disabled