@@ -3,12 +3,15 @@ Version 1.11.2 -
 Core - General:
   - Minor fix to the en_US.nls file
   - Fixes issue with miss spelled class name resulted in error when editing/adding content when sitedown was enabled.
+  - Fixes issue with {content_image urlonly=1 ...} and the assign param.
 
 MenuManager
   - Fixes minor expression issue wrt the show_all parameter in the breadcrumb action.
 
 News
   - Minor fixes.
+  - fesubmit action now documented as deprecated
+  - minor fesubmit fix.
 
 
 
